Made water shader general to all liquids. (Hopefully.)

--- a/data/shaders.cfg
+++ b/data/shaders.cfg
@@ -91,9 +91,11 @@
 		fragment: "
 			#version 120
 			uniform sampler2D u_anura_tex_map;
-			uniform sampler2D u_water_tex;
-			uniform float u_water_tex_dim;
-			uniform float u_water_tex_speed;
+			uniform sampler2D u_water_tex_0; //my kingdom for an array
+			uniform sampler2D u_water_tex_1;
+			uniform sampler2D u_water_tex_2;
+			uniform float u_water_tex_dim[3];
+			uniform float u_water_tex_speed[3];
 			uniform vec4 u_camera_pos;
 			uniform float u_zoom;
 			//uniform float u_intensity;
@@ -254,8 +256,8 @@
 				/*
 					Then we take that and divide it against the dimensions of the water texture — again, yielding a fraction.  This is meant to tell us where in the water texture we want to sample.  This handles the issue of 'repeating' the texture horizontally and vertically.
 				*/
-				loc.x *= u_anura_draw_area[2]/u_water_tex_dim;
-				loc.y *= u_anura_draw_area[2]/u_water_tex_dim;  //Note: This is not a typo, it's not supposed to be u_anura_draw_area[3]. That produces seams.
+				loc.x *= u_anura_draw_area[2]/u_water_tex_dim[water_index];
+				loc.y *= u_anura_draw_area[2]/u_water_tex_dim[water_index];  //Note: This is not a typo, it's not supposed to be u_anura_draw_area[3]. That produces seams.
 				
 				
 				/*
@@ -264,12 +266,29 @@
 					Rather than doing the 'expected' act of just plopping in a obvious 'single' texture lookup, we're actually doing *two* of them, and taking the average of the two values.  The reason for this is a cheap attempt at making two textures instead of one (essentially just making two 'layers' of the same texture on the screen).  This is meant to make it look a little bit more organic - we might switch this around in the future, but that's all this is doing.
 				*/
 				
-				vec4 liquid_tex_color =	(
-					texture2D(u_water_tex, loc + vec2(0.2, u_anura_cycle*u_water_tex_speed)) +
-					texture2D(u_water_tex, loc + vec2(0.5, u_anura_cycle*u_water_tex_speed))
-				)*0.5; //vec4(0.0,200/255.0,150/255.0,0.5);
-				
 				vec4 fb_color = texture2D(u_anura_tex_map, texcoord);
+				vec4 liquid_tex_color;
+				switch(water_index) {
+					case 0: //Water texture & movement.
+						liquid_tex_color = (
+							  texture2D(u_water_tex_0, loc + vec2(0.2, u_anura_cycle*u_water_tex_speed[water_index]))
+							+ texture2D(u_water_tex_0, loc + vec2(0.5, u_anura_cycle*u_water_tex_speed[water_index]))
+						)*0.5;
+						break;
+					case 1: //Acid texture and movement.
+						liquid_tex_color = (
+							  texture2D(u_water_tex_1, loc + vec2(u_anura_cycle*u_water_tex_speed[water_index], 0.0))
+							+ texture2D(u_water_tex_1, loc + vec2(u_anura_cycle*u_water_tex_speed[water_index], 0.5))
+						)*0.5;
+						break;
+					case 2: //Deadly acid texture and movement.
+						liquid_tex_color = (
+							  texture2D(u_water_tex_2, loc + vec2(0.2, u_anura_cycle*u_water_tex_speed[water_index] * +0.2))
+							+ texture2D(u_water_tex_2, loc + vec2(0.5, u_anura_cycle*u_water_tex_speed[water_index] * -1.5))
+						)*0.5;
+						break;
+					break;
+				}
 				
 				
 				/*
@@ -319,32 +338,59 @@
 					blurred_liquid.a
 				);
 				
-				vec3 semifinal_color = mix(screen_blended_color, overlay_blended_color, 0.9);
+				vec3 semifinal_color = mix(screen_blended_color, overlay_blended_color, 
+					float[](0.9, 0.65, 0.75)[water_index]);
 				
 				vec4 final_color = vec4(semifinal_color.r, semifinal_color.g, semifinal_color.b, blurred_liquid.a);
-				vec4 attenuated_final_color = mix(final_color, fb_color, 0.2);
 				
-				gl_FragColor = attenuated_final_color;
+				gl_FragColor = mix(final_color, fb_color, 
+					float[](0.2, 0.0, 0.0)[water_index]);
 				gl_FragColor.a = 1.0;
 			}
 		",
 
 		draw: "[
+			//Level information.
+			set(uniform_commands.u_camera_pos, level.camera_position),
+			set(uniform_commands.u_zoom, level.zoom),
+			
+			//Water rect information.
 			set(uniform_commands.u_water_count, size(waters)),
 			set(uniform_commands.u_water_area, fold(water_rects, a+b, [])),
 			set(uniform_commands.u_water_type, water_types),
-			bind_texture(water_tex, 2),
-			set(uniform_commands.u_water_tex, 2),
-			set(uniform_commands.u_water_tex_dim, ctrl.texture_dim),
-			set(uniform_commands.u_water_tex_speed, ctrl.texture_speed),
-			set(uniform_commands.u_camera_pos, level.camera_position),
-			set(uniform_commands.u_zoom, level.zoom),
-			set(textures, [water_tex]),
+			
+			//Texture information.
+			set(uniform_commands.u_water_tex_dim,   [if(ctrl, ctrl.texture_dim,   0) | ctrl <- ctrls]),
+			set(uniform_commands.u_water_tex_speed, [if(ctrl, ctrl.texture_speed, 0) | ctrl <- ctrls]),
+			
+			set(textures, []),
+			if(liquid_textures[0], [
+				bind_texture(liquid_textures[0], 2),
+				set(uniform_commands.u_water_tex_0, 2),
+				add(textures, [liquid_textures[0]]),
+			]),
+			if(liquid_textures[1], [
+				bind_texture(liquid_textures[1], 3),
+				set(uniform_commands.u_water_tex_1, 3),
+				add(textures, [liquid_textures[1]]),
+			]),
+			if(liquid_textures[2], [
+				bind_texture(liquid_textures[2], 4),
+				set(uniform_commands.u_water_tex_2, 4),
+				add(textures, [liquid_textures[2]]),
+			]),
+			
 		]
 		asserting not -1 in water_types | 'Unknown liquid found to shade, please add it below. (In [${map(waters, value.type)}])'
 		where water_tex = ctrl.get_texture
+		where liquid_textures = [ctrl and ctrl.get_texture | ctrl <- ctrls]
+		where ctrl = find_or_die(level.chars, value is obj water_controller or value is obj whitewater_controller or value is obj water_controller_rising or value is obj water_controller_ocean)
 		where 
-			ctrl = find_or_die(level.chars, value is obj water_controller or value is obj whitewater_controller or value is obj water_controller_rising or value is obj water_controller_ocean),
+			ctrls = [
+				find(waters, value is obj water_controller or value is obj whitewater_controller or value is obj water_controller_rising or value is obj water_controller_ocean),
+				find(waters, value is obj acid_controller),
+				find(waters, value is obj acid_deadly_controller),
+			],
 			water_rects = [[water._x_bound - pos[0], water._y_bound - pos[1], water._x2_bound - pos[0], water._y2_bound - pos[1]] | water <- waters],
 			water_types = [switch(true,
 				water is obj water_controller,        0,
