Switched to using only the new shader, although it has texture errors.
	- We can revert this if we need to.

--- a/data/object_prototypes/general/liquid.cfg
+++ b/data/object_prototypes/general/liquid.cfg
@@ -52,6 +52,17 @@ properties: {
 	]",
 
 	liquid_obj_constructor: "commands :: null",
+	
+	//Make sure to call this from liquid_obj_constructor!
+	setup_shader: "commands :: 
+		if(find(level.frame_buffer_shaders, value.shader_info = 'liquid') = null,
+			add(level.frame_buffer_shaders, [{
+				begin_zorder: -10000000,
+				end_zorder: lib.zorder.get('water'),
+				shader_info: 'liquid'
+			}])
+		)
+	",
 
 
 #-------------------------- vars --------------------------#
