Fixed banded background on seaside. (The alpha issue.)

--- a/data/shaders.cfg
+++ b/data/shaders.cfg
@@ -226,6 +226,7 @@
 				//Don't do anything if we didn't find a water.
 				if(water_index == u_water_count) {
 					gl_FragColor = texture2D(u_anura_tex_map, texcoord);
+					gl_FragColor.a = 1.0;
 					return;
 				}
 				
@@ -382,9 +383,7 @@
 			
 		]
 		asserting not -1 in water_types | 'Unknown liquid found to shade, please add it below. (In [${map(waters, value.type)}])'
-		where water_tex = ctrl.get_texture
 		where liquid_textures = [ctrl and ctrl.get_texture | ctrl <- ctrls]
-		where ctrl = find_or_die(level.chars, value is obj water_controller or value is obj whitewater_controller or value is obj water_controller_rising or value is obj water_controller_ocean)
 		where 
 			ctrls = [
 				find(waters, value is obj water_controller or value is obj whitewater_controller or value is obj water_controller_rising or value is obj water_controller_ocean),
