Cleanup to liquids/liquid shader, removing the old shaders.

--- a/data/object_prototypes/general/liquid.cfg
+++ b/data/object_prototypes/general/liquid.cfg
@@ -59,7 +59,8 @@ properties: {
 			add(level.frame_buffer_shaders, [{
 				begin_zorder: -10000000,
 				end_zorder: lib.zorder.get('water'),
-				shader_info: 'liquid'
+				shader_info: 'liquid',
+				label: me.type,
 			}])
 		)
 	",
