Fixed water shader & added comments for adding new water.

--- a/data/object_prototypes/general/liquid.cfg
+++ b/data/object_prototypes/general/liquid.cfg
@@ -6,6 +6,46 @@ is_strict: true,
 ignore_collide: true,
 hidden_in_game: true,
 
+//[ADDING_WATER] READ ME FIRST:
+//[ADDING_WATER] When adding new waters, which derive from this prototype, some
+//[ADDING_WATER] shader work is required. This is because we can't have
+//[ADDING_WATER] everything needed for the liquid shader be pulled out of the
+//[ADDING_WATER] object .cfg file - some waters legitimately have different
+//[ADDING_WATER] shading which necessitates *all* waters touch the system.
+//[ADDING_WATER] Previously, this was handled by having different shaders for
+//[ADDING_WATER] each water, and we still can by overriding the setup_shader
+//[ADDING_WATER] property. However, the number of shaders was getting large,
+//[ADDING_WATER] and as we needed to do some fairly heavy refactoring to them,
+//[ADDING_WATER] we decided to unify all the water shaders.
+//[ADDING_WATER] 
+//[ADDING_WATER] There are two concepts around water that you should know
+//[ADDING_WATER] about. First, a "water object" is a controller, such as water_
+//[ADDING_WATER] controller or acid_controller. All water objects inherit from
+//[ADDING_WATER] this prototype, liquid. The other concept is a "water type",
+//[ADDING_WATER] which is how the water is shaded. For example, water_
+//[ADDING_WATER] controller and water_controller_ocean are both are shaded like
+//[ADDING_WATER] water, but acid_controller is shaded like acid. Because of the
+//[ADDING_WATER] way shaders work, we give each water type a number. Water,
+//[ADDING_WATER] being the oldest liquid, happens to be water type 0. Acid is
+//[ADDING_WATER] water type 1. This mapping is defined in a switch statement
+//[ADDING_WATER] in shaders.cfg.
+//[ADDING_WATER] 
+//[ADDING_WATER] There are two stages of adding a water (aka a liquid):
+//[ADDING_WATER] 1. Adding a new "water object" which is shaded the same as an
+//[ADDING_WATER]    existing water object. Seach for all "[ADDING_WATER]" in
+//[ADDING_WATER]    shaders.cfg. You are *not* adding a new water type at this
+//[ADDING_WATER]    moment, so you only care about the "create" and "draw"
+//[ADDING_WATER]    events. Register your new water controller object as
+//[ADDING_WATER]    described there, using an existing water type.
+//[ADDING_WATER]    Make sure everything works. If you do not need to shade
+//[ADDING_WATER]    your new water differently, you are done!
+//[ADDING_WATER] 2. Adding a new type of shading for your water object. This
+//[ADDING_WATER]    new "water type" will necessitate a bit of shader work -
+//[ADDING_WATER]    you will have to add a new texture, some new math, and a
+//[ADDING_WATER]    bit of metadata to tell how it should move. Again, search
+//[ADDING_WATER]    for all "[ADDING_WATER]" in shaders.cfg to see what you
+//[ADDING_WATER]    need to change to do this.
+
 properties: {
 #-------------------------- liquid-specific settings --------------------------#
 	get_texture: "texture_object :: query_cache(global_cache(4), null, get_texture(liquid_texture))",
