--- a/data/shaders.cfg
+++ b/data/shaders.cfg
@@ -94,14 +94,17 @@
 			uniform sampler2D u_water_tex_0; //my kingdom for an array
 			uniform sampler2D u_water_tex_1;
 			uniform sampler2D u_water_tex_2;
+			//[ADDING_WATER] If adding a new water type, add its texture sampler.
 			uniform float u_water_tex_dim[3];
 			uniform float u_water_tex_speed[3];
+			//[ADDING_WATER] If adding a new water type, increase the size of
+			//[ADDING_WATER] dim and speed by 1 each to accommodate the new data.
 			uniform vec4 u_camera_pos;
 			uniform float u_zoom;
 			//uniform float u_intensity;
 			uniform int u_water_count; //Can't be uint, that just... doesn't work. O_o
-			uniform vec4 u_water_area[8];
-			uniform int u_water_type[8];
+			uniform vec4 u_water_area[8]; //8 water areas on screen at one time max.
+			uniform int u_water_type[8];  //The numeric water types of each area, so we know how to shade them. 1=water, 2=acid, etc.
 			uniform float u_anura_cycle;
 			uniform vec4 u_anura_draw_area;
 			//uniform vec4 u_anura_sprite_area;
@@ -230,6 +233,8 @@
 					return;
 				}
 				
+				int water_type = u_water_type[water_index];
+				
 				/*
 					This is the heart of our 'distortion'; right now, this works by only 'wobbling' the x-coord of the pixel; basically we decide to sample from a different point in the source texture, based on the current timestamp.
 					
@@ -257,8 +262,8 @@
 				/*
 					Then we take that and divide it against the dimensions of the water texture — again, yielding a fraction.  This is meant to tell us where in the water texture we want to sample.  This handles the issue of 'repeating' the texture horizontally and vertically.
 				*/
-				loc.x *= u_anura_draw_area[2]/u_water_tex_dim[water_index];
-				loc.y *= u_anura_draw_area[2]/u_water_tex_dim[water_index];  //Note: This is not a typo, it's not supposed to be u_anura_draw_area[3]. That produces seams.
+				loc.x *= u_anura_draw_area[2]/u_water_tex_dim[water_type];
+				loc.y *= u_anura_draw_area[2]/u_water_tex_dim[water_type];  //Note: This is not a typo, it's not supposed to be u_anura_draw_area[3]. That produces seams.
 				
 				
 				/*
@@ -269,26 +274,31 @@
 				
 				vec4 fb_color = texture2D(u_anura_tex_map, texcoord);
 				vec4 liquid_tex_color;
-				switch(water_index) {
+				switch(water_type) {
 					case 0: //Water texture & movement.
 						liquid_tex_color = (
-							  texture2D(u_water_tex_0, loc + vec2(0.2, u_anura_cycle*u_water_tex_speed[water_index]))
-							+ texture2D(u_water_tex_0, loc + vec2(0.5, u_anura_cycle*u_water_tex_speed[water_index]))
+							  texture2D(u_water_tex_0, loc + vec2(0.2, u_anura_cycle*u_water_tex_speed[water_type]))
+							+ texture2D(u_water_tex_0, loc + vec2(0.5, u_anura_cycle*u_water_tex_speed[water_type]))
 						)*0.5;
 						break;
 					case 1: //Acid texture and movement.
 						liquid_tex_color = (
-							  texture2D(u_water_tex_1, loc + vec2(u_anura_cycle*u_water_tex_speed[water_index], 0.0))
-							+ texture2D(u_water_tex_1, loc + vec2(u_anura_cycle*u_water_tex_speed[water_index], 0.5))
+							  texture2D(u_water_tex_1, loc + vec2(u_anura_cycle*u_water_tex_speed[water_type], 0.0))
+							+ texture2D(u_water_tex_1, loc + vec2(u_anura_cycle*u_water_tex_speed[water_type], 0.5))
 						)*0.5;
 						break;
 					case 2: //Deadly acid texture and movement.
 						liquid_tex_color = (
-							  texture2D(u_water_tex_2, loc + vec2(0.2, u_anura_cycle*u_water_tex_speed[water_index] * +0.2))
-							+ texture2D(u_water_tex_2, loc + vec2(0.5, u_anura_cycle*u_water_tex_speed[water_index] * -1.5))
+							  texture2D(u_water_tex_2, loc + vec2(0.2, u_anura_cycle*u_water_tex_speed[water_type] * +0.2))
+							+ texture2D(u_water_tex_2, loc + vec2(0.5, u_anura_cycle*u_water_tex_speed[water_type] * -1.5))
 						)*0.5;
 						break;
-					break;
+					//[ADDING_WATER] If adding a new water type, specify the
+					//[ADDING_WATER] new mix above.
+					default: //No water found, just shade grey and abort *if* we get here.
+						gl_FragColor = vec4(0.5,0.5,0.5,1);
+						return;
+						break;
 				}
 				
 				
@@ -339,18 +349,47 @@
 					blurred_liquid.a
 				);
 				
+				//[ADDING_WATER] If adding a new water type, add a float below.
 				vec3 semifinal_color = mix(screen_blended_color, overlay_blended_color, 
-					float[](0.9, 0.65, 0.75)[water_index]);
+					float[](0.9, 0.65, 0.75)[water_type]);
 				
 				vec4 final_color = vec4(semifinal_color.r, semifinal_color.g, semifinal_color.b, blurred_liquid.a);
 				
+				//[ADDING_WATER] If adding a new water type, add a float below.
 				gl_FragColor = mix(final_color, fb_color, 
-					float[](0.2, 0.0, 0.0)[water_index]);
+					float[](0.2, 0.0, 0.0)[water_type]);
 				gl_FragColor.a = 1.0;
 			}
 		",
+		
+		create: "[//Load constant texture information into the shader, for all waters in the level.
+			set(textures, liquid_textures),
+			
+			bind_texture(liquid_textures[0], 2),
+			bind_texture(liquid_textures[1], 3),
+			bind_texture(liquid_textures[2], 4),
+			set(uniform_commands.u_water_tex_0, 2),
+			set(uniform_commands.u_water_tex_1, 3),
+			set(uniform_commands.u_water_tex_2, 4),
+			//[ADDING_WATER] If adding a water type, add a new texture binding
+			//[ADDING_WATER] above. This is because we can't pass in uniform
+			//[ADDING_WATER] arrays from Anura.
+			
+			set(uniform_commands.u_water_tex_dim,   [if(ctrl, ctrl.texture_dim,   1) | ctrl <- ctrls]),
+			set(uniform_commands.u_water_tex_speed, [if(ctrl, ctrl.texture_speed, 1) | ctrl <- ctrls]),
+		] where liquid_textures = [
+			if(ctrl, ctrl.get_texture, load_texture('default-animation.png'))
+			| ctrl <- ctrls
+		] where ctrls = [
+			find(level.chars, value is obj water_controller or value is obj whitewater_controller or value is obj water_controller_rising or value is obj water_controller_ocean),
+			find(level.chars, value is obj acid_controller),
+			find(level.chars, value is obj acid_deadly_controller),
+			//[ADDING_WATER] The index of the water found in the list must be
+			//[ADDING_WATER] the water type number. All liquids must be in this
+			//[ADDING_WATER] list.
+		]",
 
-		draw: "[
+		draw: "[//Load dynamic level information into the shader.
 			//Level information.
 			set(uniform_commands.u_camera_pos, level.camera_position),
 			set(uniform_commands.u_zoom, level.zoom),
@@ -358,39 +397,16 @@
 			//Water rect information.
 			set(uniform_commands.u_water_count, size(waters)),
 			set(uniform_commands.u_water_area, fold(water_rects, a+b, [])),
-			set(uniform_commands.u_water_type, water_types),
-			
-			//Texture information.
-			set(uniform_commands.u_water_tex_dim,   [if(ctrl, ctrl.texture_dim,   0) | ctrl <- ctrls]),
-			set(uniform_commands.u_water_tex_speed, [if(ctrl, ctrl.texture_speed, 0) | ctrl <- ctrls]),
-			
-			set(textures, []),
-			if(liquid_textures[0], [
-				bind_texture(liquid_textures[0], 2),
-				set(uniform_commands.u_water_tex_0, 2),
-				add(textures, [liquid_textures[0]]),
-			]),
-			if(liquid_textures[1], [
-				bind_texture(liquid_textures[1], 3),
-				set(uniform_commands.u_water_tex_1, 3),
-				add(textures, [liquid_textures[1]]),
-			]),
-			if(liquid_textures[2], [
-				bind_texture(liquid_textures[2], 4),
-				set(uniform_commands.u_water_tex_2, 4),
-				add(textures, [liquid_textures[2]]),
-			]),
-			
+			set(uniform_commands.u_water_type, (water_types+[-1]*8)[:8]), //This array amongst all others can't be half-populated, it needs all elements.
 		]
 		asserting not -1 in water_types | 'Unknown liquid found to shade, please add it below. (In [${map(waters, value.type)}])'
-		where liquid_textures = [ctrl and ctrl.get_texture | ctrl <- ctrls]
 		where 
-			ctrls = [
-				find(waters, value is obj water_controller or value is obj whitewater_controller or value is obj water_controller_rising or value is obj water_controller_ocean),
-				find(waters, value is obj acid_controller),
-				find(waters, value is obj acid_deadly_controller),
-			],
-			water_rects = [[water._x_bound - pos[0], water._y_bound - pos[1], water._x2_bound - pos[0], water._y2_bound - pos[1]] | water <- waters],
+			water_rects = [[
+				water._x_bound  - pos[0],
+				water._y_bound  - pos[1], 
+				water._x2_bound - pos[0], 
+				water._y2_bound - pos[1]
+			] | water <- waters],
 			water_types = [switch(true,
 				water is obj water_controller,        0,
 				water is obj whitewater_controller,   0,
@@ -398,6 +414,10 @@
 				water is obj water_controller_ocean,  0,
 				water is obj acid_controller,         1,
 				water is obj acid_deadly_controller,  2,
+				//[ADDING_WATER] If your new water is shaded like an existing
+				//[ADDING_WATER] water, add it above and use an existing water
+				//[ADDING_WATER] type number. Otherwise, add a new water type
+				//[ADDING_WATER] number.
 				-1
 			) | water <- waters]
 		where waters = (
