Downgraded several shader features to (probably) work on my machine, that were preventing the game from launching.

--- a/data/shaders.cfg
+++ b/data/shaders.cfg
@@ -97,8 +97,7 @@
 			//[ADDING_WATER] If adding a new water type, add its texture sampler.
 			uniform float u_water_tex_dim[3];
 			uniform float u_water_tex_speed[3];
-			//[ADDING_WATER] If adding a new water type, increase the size of
-			//[ADDING_WATER] dim and speed by 1 each to accommodate the new data.
+			//[ADDING_WATER] If adding a new water type, increase the size of dim and speed by 1 each to accommodate the new data.
 			uniform vec4 u_camera_pos;
 			uniform float u_zoom;
 			//uniform float u_intensity;
@@ -108,56 +107,23 @@
 			uniform float u_anura_cycle;
 			uniform vec4 u_anura_draw_area;
 			//uniform vec4 u_anura_sprite_area;
-			in vec2 v_texcoord;
-			in vec2 v_vertex;
+			varying vec2 v_texcoord;
+			varying vec2 v_vertex;
 			
-			const lowp float blur_coefficients[33] = float[](
-				0.000000000232830643653869,
-				0.000000007450580596923828,
-				0.00000011548399925231934,
-				0.0000011548399925231934,
-				0.000008372589945793152,
-				0.00004688650369644165,
-				0.00021098926663398743,
-				0.000783674418926239,
-				0.002448982559144497,
-				0.0065306201577186584,
-				0.015020426362752914,
-				0.03004085272550583,
-				0.0525714922696352,
-				0.08087921887636185,
-				0.10976465418934822,
-				0.13171758502721786,
-				0.13994993409141898,
-				0.13171758502721786,
-				0.10976465418934822,
-				0.08087921887636185,
-				0.0525714922696352,
-				0.03004085272550583,
-				0.015020426362752914,
-				0.0065306201577186584,
-				0.002448982559144497,
-				0.000783674418926239,
-				0.00021098926663398743,
-				0.00004688650369644165,
-				0.000008372589945793152,
-				0.0000011548399925231934,
-				0.00000011548399925231934,
-				0.000000007450580596923828,
-				0.000000000232830643653869
-			);
+
+
 			
-			const float ease_out_circ(float t)
+			float ease_out_circ(float t)
 			{
 				return sqrt(1.0 - pow( (t-1.0), 2.0 ) );
 			}
 
-			const float ease_in_circ(float t)
+			float ease_in_circ(float t)
 			{
 				return 1.0 - sqrt(1.0 - pow(t, 2.0) );
 			}
 
-			const float ease_in_out_circ(float t)
+			float ease_in_out_circ(float t)
 			{
 				float time = t*2.0;
 
@@ -168,28 +134,28 @@
 				}
 			}
 
-			const float blendOverlay(float base, float blend) {
+			float blendOverlay(float base, float blend) {
 				return base<0.5?(2.0*base*blend):(1.0-2.0*(1.0-base)*(1.0-blend));
 			}
 
-			const vec3 blendOverlay(vec3 base, vec3 blend) {
+			vec3 blendOverlay(vec3 base, vec3 blend) {
 				return vec3(blendOverlay(base.r,blend.r),blendOverlay(base.g,blend.g),blendOverlay(base.b,blend.b));
 			}
 
-			const vec3 blendOverlay(vec3 base, vec3 blend, float opacity) {
+			vec3 blendOverlay(vec3 base, vec3 blend, float opacity) {
 				return (blendOverlay(base, blend) * opacity + base * (1.0 - opacity));
 			}			
 
 
-			const float blendScreen(float base, float blend) {
+			float blendScreen(float base, float blend) {
 				return 1.0-((1.0-base)*(1.0-blend));
 			}
 
-			const vec3 blendScreen(vec3 base, vec3 blend) {
+			vec3 blendScreen(vec3 base, vec3 blend) {
 				return vec3(blendScreen(base.r,blend.r),blendScreen(base.g,blend.g),blendScreen(base.b,blend.b));
 			}
 
-			const vec3 blendScreen(vec3 base, vec3 blend, float opacity) {
+			vec3 blendScreen(vec3 base, vec3 blend, float opacity) {
 				return (blendScreen(base, blend) * opacity + base * (1.0 - opacity));
 			}
 		
@@ -274,31 +240,34 @@
 				
 				vec4 fb_color = texture2D(u_anura_tex_map, texcoord);
 				vec4 liquid_tex_color;
-				switch(water_type) {
-					case 0: //Water texture & movement.
+				
+				if( water_type == 0 ){
+					//Water texture & movement.
 						liquid_tex_color = (
 							  texture2D(u_water_tex_0, loc + vec2(0.2, u_anura_cycle*u_water_tex_speed[water_type]))
 							+ texture2D(u_water_tex_0, loc + vec2(0.5, u_anura_cycle*u_water_tex_speed[water_type]))
 						)*0.5;
-						break;
-					case 1: //Acid texture and movement.
+						
+				} else if ( water_type == 1 ) {
+					//Acid texture and movement.
 						liquid_tex_color = (
 							  texture2D(u_water_tex_1, loc + vec2(u_anura_cycle*u_water_tex_speed[water_type], 0.0))
 							+ texture2D(u_water_tex_1, loc + vec2(u_anura_cycle*u_water_tex_speed[water_type], 0.5))
 						)*0.5;
-						break;
-					case 2: //Deadly acid texture and movement.
+						
+				} else if ( water_type == 1 ) {
+					//Deadly acid texture and movement.
 						liquid_tex_color = (
 							  texture2D(u_water_tex_2, loc + vec2(0.2, u_anura_cycle*u_water_tex_speed[water_type] * +0.2))
 							+ texture2D(u_water_tex_2, loc + vec2(0.5, u_anura_cycle*u_water_tex_speed[water_type] * -1.5))
 						)*0.5;
-						break;
-					//[ADDING_WATER] If adding a new water type, specify the
-					//[ADDING_WATER] new mix above.
-					default: //No water found, just shade grey and abort *if* we get here.
+						
+					//[ADDING_WATER] If adding a new water type, specify the new mix above.
+					
+				} else {
+					//No water found, just shade grey and abort *if* we get here.
 						gl_FragColor = vec4(0.5,0.5,0.5,1);
 						return;
-						break;
 				}
 				
 				
@@ -308,6 +277,45 @@
 					We start by sampling the frame buffer (i.e. the screenshot of what's on the level already), and pluck the pixel we're looking at, and ask 'what is the brightness of the pixel' - we're asking for the overall brightness, so we don't care about the hue data, we just covert to grayscale. 
 				*/
 				float fb_grayscale = (fb_color[0] + fb_color[1] + fb_color[2])/3.0;
+
+				float blur_coefficients[33];
+
+				blur_coefficients[0] =  0.000000000232830643653869;
+				blur_coefficients[1] =  0.000000007450580596923828;
+				blur_coefficients[2] =  0.00000011548399925231934;
+				blur_coefficients[3] =  0.0000011548399925231934;
+				blur_coefficients[4] =  0.000008372589945793152;
+				blur_coefficients[5] =  0.00004688650369644165;
+				blur_coefficients[6] =  0.00021098926663398743;
+				blur_coefficients[7] =  0.000783674418926239;
+				blur_coefficients[8] =  0.002448982559144497;
+				blur_coefficients[9] =  0.0065306201577186584;
+				blur_coefficients[10] = 0.015020426362752914;
+				blur_coefficients[11] = 0.03004085272550583;
+				blur_coefficients[12] = 0.0525714922696352;
+				blur_coefficients[13] = 0.08087921887636185;
+				blur_coefficients[14] = 0.10976465418934822;
+				blur_coefficients[15] = 0.13171758502721786;
+				blur_coefficients[16] = 0.13994993409141898;
+				blur_coefficients[17] = 0.13171758502721786;
+				blur_coefficients[18] = 0.10976465418934822;
+				blur_coefficients[19] = 0.08087921887636185;
+				blur_coefficients[20] = 0.0525714922696352;
+				blur_coefficients[21] = 0.03004085272550583;
+				blur_coefficients[22] = 0.015020426362752914;
+				blur_coefficients[23] = 0.0065306201577186584;
+				blur_coefficients[24] = 0.002448982559144497;
+				blur_coefficients[25] = 0.000783674418926239;
+				blur_coefficients[26] = 0.00021098926663398743;
+				blur_coefficients[27] = 0.00004688650369644165;
+				blur_coefficients[28] = 0.000008372589945793152;
+				blur_coefficients[29] = 0.0000011548399925231934;
+				blur_coefficients[30] = 0.00000011548399925231934;
+				blur_coefficients[31] = 0.000000007450580596923828;
+				blur_coefficients[32] = 0.000000000232830643653869;			
+
+
+
 	
 				float blur_accumulator_h = 0.;
 				for(int i = 0; i != 33; ++i) {
@@ -414,10 +422,7 @@
 				water is obj water_controller_ocean,  0,
 				water is obj acid_controller,         1,
 				water is obj acid_deadly_controller,  2,
-				//[ADDING_WATER] If your new water is shaded like an existing
-				//[ADDING_WATER] water, add it above and use an existing water
-				//[ADDING_WATER] type number. Otherwise, add a new water type
-				//[ADDING_WATER] number.
+				//[ADDING_WATER] If your new water is shaded like an existing water, add it above and use an existing water type number. Otherwise, add a new water type number.
 				-1
 			) | water <- waters]
 		where waters = (
