Got the liquid code running again.

--- a/data/objects/effects/liquids/water_controller_ocean.cfg
+++ b/data/objects/effects/liquids/water_controller_ocean.cfg
@@ -96,7 +96,6 @@ on_editor_changed_variable: "[
 	//Hack: Fix water not moving in response to editor. (I think it gets set to the original object, not the 'shadow object' we're editing.)
 	set(volume_bubbles.parent, me),
 	set(underlay_obj.controller, me),
-	set(top_obj.controller, me),
 	set(lights_obj.controller, me),
 	set(lights_transverse_obj.controller, me),
 	
@@ -165,7 +164,7 @@ object_type: [
 			set(x,controller._x_bound),
 			set(y,controller._y_bound),
 			set(draw_area, [
-				5.0*_timeshift*sin(controller._offset), 
+				5.0*_timeshift*sin(_offset), 
 				0, 
 				abs(controller._x2_bound-controller._x_bound)/2, 
 				img_h/2
