Updated our water controllers to use effects_attaches so they save/load correctly.

--- a/data/objects/effects/liquids/acid_deadly_controller.cfg
+++ b/data/objects/effects/liquids/acid_deadly_controller.cfg
@@ -31,13 +31,15 @@ properties: {
 	underlay_obj: {
 		type: "obj acid_deadly_controller.underlay",
 		init: "object('acid_deadly_controller.underlay', mid_x, mid_y, {
-				controller: me,
+				parent: me,
+				time_to_die: 50,
 			})",
 	},
 	top_obj: {
 		type: "obj acid_deadly_controller.top",
 		init: "object('acid_deadly_controller.top', mid_x, mid_y, {
-				controller: me,
+				parent: me,
+				time_to_die: 50,
 			})",
 	},
 
@@ -95,9 +97,7 @@ properties: {
 
 on_editor_changed_variable: "[
 	//Hack: Fix water not moving in response to editor. (I think it gets set to the original object, not the 'shadow object' we're editing.)
-	set(acid_surface_bubbles.parent, me),
-	set(underlay_obj.controller, me),
-	set(top_obj.controller, me),
+
 	
 	proto_event('liquid', 'editor_changed_variable'),
 ]",
@@ -156,24 +156,30 @@ particle_system: [
 object_type: [
 	{
 		id: "top",
+		prototype: ["effects_attache"],
 		zorder: "@include data/zorder.cfg:exterior_near_background",
 		properties: {
+			
+			do_setup: "[
+				set(x, _parent_obj._x_bound),
+				set(y, _parent_obj._y_bound - 20),
+				set(draw_area, [
+					5.0*sin(_offset), 
+					0, 
+					abs(_parent_obj._x2_bound-_parent_obj._x_bound)/2, 
+					img_h/2
+				])
+			] asserting _parent_obj is obj liquid",
+			
+			handle_specialized_processing: "[
+				add(_offset,1.5),
+				do_setup,
+			]",
+
 		#-------------------------- vars --------------------------#
-			controller: { type: "obj liquid", persistent: false },
 			_offset: { type: "decimal", default: 0, persistent: false },
 		},
-		on_create: "[fire_event('calculate_segments')]",
-		on_calculate_segments: "[
-			set(x,controller._x_bound),
-			set(y,controller._y_bound - 20),
-			set(draw_area, [
-				5.0*sin(_offset), 
-				0, 
-				abs(controller._x2_bound-controller._x_bound)/2, 
-				img_h/2
-			]),
-		]",
-		on_process: "[add(_offset,1.5),fire_event('calculate_segments')]",
+
 
 		#we don't want to compile the image since we rely on it tiling.
 		no_compile_image: "liquids/lethal-acid-top.png",
@@ -188,24 +194,30 @@ object_type: [
 	},
 	{
 		id: "underlay",
+		prototype: ["effects_attache"],
 		zorder: "@include data/zorder.cfg:background_parallax_walls_further",
 		properties: {
+			do_setup: "[
+				set(x, _parent_obj._x_bound),
+				set(y, _parent_obj._y_bound),
+				set(draw_area, [
+					0, 
+					_offset, 
+					abs(_parent_obj._x2_bound-_parent_obj._x_bound)/2, 
+					abs(_parent_obj._y2_bound-_parent_obj._y_bound)/2
+				]),
+			] asserting _parent_obj is obj liquid",
+			
+			handle_specialized_processing: "[
+				add(_offset,-0.2),
+				do_setup,
+			]",
+
+
 		#-------------------------- vars --------------------------#
-			controller: { type: "obj liquid", persistent: false },
 			_offset: { type: "decimal", default: 0, persistent: false },
 		},
-		on_create: "[fire_event('calculate_segments')]",
-		on_calculate_segments: "[
-			set(x,controller._x_bound),
-			set(y,controller._y_bound),
-			set(draw_area, [
-				0, 
-				_offset, 
-				abs(controller._x2_bound-controller._x_bound)/2, 
-				abs(controller._y2_bound-controller._y_bound)/2
-			]),
-		]",
-		on_process: "[add(_offset,-0.2),fire_event('calculate_segments')]",
+
 
 		#we don't want to compile the image since we rely on it tiling.
 		no_compile_image: "liquids/lethal-acid-bg.png",
