--- a/data/objects/effects/liquids/water_controller_ocean.cfg
+++ b/data/objects/effects/liquids/water_controller_ocean.cfg
@@ -26,19 +26,22 @@ properties: {
 	underlay_obj: {
 		type: "obj water_controller_ocean.underlay",
 		init: "object('water_controller_ocean.underlay', mid_x, mid_y, {
-				controller: me,
+				parent: me,
+				time_to_die: 50,
 			})",
 	},
 	lights_obj: {
 		type: "obj water_controller_ocean.lights",
 		init: "object('water_controller_ocean.lights', mid_x, mid_y, {
-				controller: me,
+				parent: me,
+				time_to_die: 50,
 			})",
 	},
 	lights_transverse_obj: {
 		type: "obj water_controller_ocean.lights",
 		init: "object('water_controller_ocean.lights', mid_x, mid_y, {
-				controller: me,
+				parent: me,
+				time_to_die: 50,
 				_timeshift: 1.4,
 			})",
 	},
@@ -93,11 +96,6 @@ properties: {
 
 
 on_editor_changed_variable: "[
-	//Hack: Fix water not moving in response to editor. (I think it gets set to the original object, not the 'shadow object' we're editing.)
-	set(volume_bubbles.parent, me),
-	set(underlay_obj.controller, me),
-	set(lights_obj.controller, me),
-	set(lights_transverse_obj.controller, me),
 	
 	proto_event('liquid', 'editor_changed_variable'),
 ]",
@@ -116,24 +114,29 @@ animation: {
 object_type: [
 	{
 		id: "underlay",
+		prototype: ["effects_attache"],
 		zorder: "@include data/zorder.cfg:background_parallax_walls_further",
 		properties: {
+
+			do_setup: "[
+				set(x,_parent_obj._x_bound),
+				set(y,_parent_obj._y_bound),
+				set(draw_area, [
+					0,
+					_offset, 
+					abs(_parent_obj._x2_bound-_parent_obj._x_bound)/2, 
+					abs(_parent_obj._y2_bound-_parent_obj._y_bound)/2
+				]),
+			] asserting _parent_obj is obj liquid",
+			
+			handle_specialized_processing: "[
+				add(_offset,0.25),
+				do_setup,
+			]",
+
 		#-------------------------- vars --------------------------#
-			controller: { type: "obj liquid", persistent: false },
 			_offset: { type: "decimal", default: 0, persistent: false },
 		},
-		on_create: "[fire_event('calculate_segments')]",
-		on_calculate_segments: "[
-			set(x,controller._x_bound),
-			set(y,controller._y_bound),
-			set(draw_area, [
-				0,
-				_offset, 
-				abs(controller._x2_bound-controller._x_bound)/2, 
-				abs(controller._y2_bound-controller._y_bound)/2
-			]),
-		]",
-		on_process: "[add(_offset,0.25),fire_event('calculate_segments')]",
 
 		#we don't want to compile the image since we rely on it tiling.
 		no_compile_image: "liquids/water-texture.png",
@@ -148,29 +151,34 @@ object_type: [
 	},
 	{
 		id: "lights",
+		prototype: ["effects_attache"],
 		zorder: "@include data/zorder.cfg:exterior_near_background",
 		zsub_order: 1,
 		properties: {
+		
+			do_setup: "[
+				set(alpha,127),
+
+				set(x,_parent_obj._x_bound),
+				set(y,_parent_obj._y_bound),
+				set(draw_area, [
+					5.0*_timeshift*sin(_offset), 
+					0, 
+					abs(_parent_obj._x2_bound-_parent_obj._x_bound)/2, 
+					img_h/2
+				]),
+			] asserting _parent_obj is obj liquid",
+			
+			handle_specialized_processing: "[
+				add(_offset,1.5),
+				do_setup,
+			]",
+
+		
 		#-------------------------- vars --------------------------#
-			controller: { type: "obj liquid", persistent: false },
 			_offset: { type: "decimal", default: 0, persistent: false },
 			_timeshift: { type: "decimal", default: 0, persistent: false },
 		},
-		on_create: "[
-			fire_event('calculate_segments'),
-			set(alpha,127),
-		]",
-		on_calculate_segments: "[
-			set(x,controller._x_bound),
-			set(y,controller._y_bound),
-			set(draw_area, [
-				5.0*_timeshift*sin(_offset), 
-				0, 
-				abs(controller._x2_bound-controller._x_bound)/2, 
-				img_h/2
-			]),
-		]",
-		on_process: "[add(_offset,1.5),fire_event('calculate_segments')]",
 
 		#we don't want to compile the image since we rely on it tiling.
 		no_compile_image: "liquids/water-texture-lights.png",
