Re-added clip of water to screen I'd taken out while refactoring.
	- I was blind; but now I see.
	- There are two types of reformers…

--- a/data/shaders.cfg
+++ b/data/shaders.cfg
@@ -176,10 +176,10 @@
 				int water_index;
 				float left, top, right, bottom;
 				for(water_index = 0; water_index < u_water_count; water_index++) {
-					left   = u_water_area[water_index][0]; //Was max(u_anura_draw_area[0], u_water_area[n][0]), but we should never be outside the u_anura_draw_area in a pixel shader?
-					top    = u_water_area[water_index][1];
-					right  = u_water_area[water_index][2];
-					bottom = u_water_area[water_index][3];
+					left = max(u_anura_draw_area[0], u_water_area[water_index][0]); //Clip the water area to the screen, so that it doesn't slide around near the edge and produce artefacts.
+					top = max(u_anura_draw_area[1], u_water_area[water_index][1]);
+					right = min(u_anura_draw_area[2], u_water_area[water_index][2]);
+					bottom = min(u_anura_draw_area[3], u_water_area[water_index][3]);
 					
 					//bounds check
 					if(
