Translation fixes, add inventory items to gettext template.

--- a/data/objects/gui-components/inventory-screen/map_pane.cfg
+++ b/data/objects/gui-components/inventory-screen/map_pane.cfg
@@ -10,7 +10,7 @@ properties: {
 			relative_y: -200,
 			use_absolute_screen_coordinates: true,
 			zorder: int<-lib.json.get_document_map('data/zorder.cfg').overlaid_gui_dialog_gui_element,
-			txt: level.title,
+			txt: translate(level.title),
 			font: 'door_label_dark',
 			align: 'center',
 			parent: me,
