--- a/data/objects/playable/frogatto_playable.cfg
+++ b/data/objects/playable/frogatto_playable.cfg
@@ -213,7 +213,7 @@ properties: {
 	do_post_victory_transport: "def(string target_level, string target_obj) -> commands execute(me,[
 									set(me.hitpoints, me.max_hitpoints),
 									standard_victory_music,
-									title('Victory!',200),
+									title(~Victory!~,200),
 									do_cinematic_float(
 									[
 									def() schedule(1, sinusoidal_transition({period:90, _init_theta:0.0, _length_theta:1.0, addend:2, coefficient:1, obj:level, aspect:'zoom'})),
@@ -228,7 +228,7 @@ properties: {
 	do_post_victory_without_transport: "def([function() -> commands] post_landing_todos) -> commands execute(me,[
 					set(me.hitpoints, me.max_hitpoints),
 					standard_victory_music,
-					title('Victory!',200),
+					title(~Victory!~,200),
 					do_cinematic_float(
 					[def() schedule(119, remove_control_lock('cinematic_float')),
 					def() schedule(60, sinusoidal_transition({period:100, _init_theta:1.0, _length_theta:1.0, addend:1, coefficient:1, obj:level, aspect:'zoom'})),
