--- a/data/objects/effects/liquids/whitewater_controller.cfg
+++ b/data/objects/effects/liquids/whitewater_controller.cfg
@@ -8,16 +8,8 @@ properties: {
 	
 	add_water_effect: "add_water(_x_bound, _y_bound, _x2_bound, _y2_bound, [140,00,0,70])",
 	
-	add_particle_effect: "[
-		add_particles('bubbles'),
-		add_particles('fizz'),
-		add_particles('splash'),
-		add_particles('splash_droplets'),
-		
-		set(volume_bubbles.clip_area, [_x_bound-mid_x, _y_bound-mid_y, _x2_bound - _x_bound, _y2_bound - _y_bound, ]),
-		fire_event('setup_particles')
-	]",
 	
+#-------------------------- fx objects --------------------------#
 	volume_bubbles: { 
 		type: "obj particle_attache", 
 		init: "object('particle_attache', x,y, {
@@ -28,54 +20,78 @@ properties: {
 			zorder: lib.zorder.get('liquid_particle_effects'),
 		})"
 	},
+
+#-------------------------- constructors --------------------------#
+	liquid_obj_constructor: "commands :: [
+		add_particle_effect ;
+		setup_particles ;
+		[
+			setup_shader,
+//			add_object(underlay_obj),
+//			add_object(top_obj),
+//			add_object(lights_obj),
+//			add_object(lights_transverse_obj),
+		]
+
+	]",
+
+
+	add_particle_effect: "[
+		add_object(volume_bubbles),
+		add_particles('fizz'),
+		add_particles('splash'),
+		add_particles('splash_droplets'),
+	]",
+
+
+	setup_particles: "[
+		set(volume_bubbles.clip_area, [_x_bound-mid_x, _y_bound-mid_y, _x2_bound - _x_bound, _y2_bound - _y_bound, ]),
+		set(volume_bubbles.particles, (
+			raw_particle_system_info + {
+				position: [
+					(_x_bound + _x2_bound)/2 - mid_x, //Horizontal offset of particle system as wide as the water, to handle when the emitter object isn't square within the bounds of the water.
+					_y2_bound - mid_y, //Position the center point (of the box emitter) at the bottom of the body of water.
+					0
+				],
+				fast_forward: (map <- raw_particle_system_info.fast_forward) + {
+					time: bubble_average_lifetime, //Pump the water full of bubbles when we first encounter it.
+				},
+				emitter: (map <- raw_particle_system_info.emitter) + {
+					time_to_live: bubble_average_lifetime, //Make the bubbles live until the top of the water.
+					box_width: _x2_bound - _x_bound, //Make the bubbles as wide as the water. (To position the bubbles, see `position` above.)
+					emission_rate: (map <- (map <- raw_particle_system_info.emitter).emission_rate) + {
+						max: (_x2_bound - _x_bound) / 20, //Particle density. (Particles per pixel of water surface, divided by 2 on average because random floor is 0.)
+					}
+				},
+			} where
+				raw_particle_system_info = 
+					(ParticleSystemInfo <- get_document('data/particles/bubbles_2.cfg')).info,
+				bubble_average_lifetime = 
+					(_y2_bound - _y_bound) / average_vertical_bubble_speed / 60/*fps*/
+					where average_vertical_bubble_speed = 0.7 //as experimentally verified
+		)),
+
+
+		set(particle_systems['fizz'].min_x, _x_bound - x),
+		set(particle_systems['fizz'].max_x, _x2_bound - x),
+		set(particle_systems['fizz'].min_y, (_y_bound - 15) - y),
+		set(particle_systems['fizz'].max_y, (_y_bound + 60) - y),
+		set(particle_systems['fizz'].spawn_rate, 4*(_x2_bound - _x_bound)),
+		set(particle_systems['splash'].min_x, _x_bound - x),
+		set(particle_systems['splash'].max_x, _x2_bound - 54 - x),
+		set(particle_systems['splash'].min_y, (_y_bound + 6) - y),
+		set(particle_systems['splash'].max_y, (_y_bound + 6) - y),
+		set(particle_systems['splash'].spawn_rate, 1*(_x2_bound - _x_bound)),
+		set(particle_systems['splash_droplets'].pos_x, _x_bound - x),
+		set(particle_systems['splash_droplets'].pos_x_rand, _x2_bound - x),
+		set(particle_systems['splash_droplets'].pos_y, (_y_bound) - y),
+		set(particle_systems['splash_droplets'].pos_y_rand, (_y_bound) - y),
+		set(particle_systems['splash_droplets'].generation_rate, 10*(_x2_bound - _x_bound))
+	]",
+
 },
 	
-on_setup_particles: "[
-	set(volume_bubbles.clip_area, [_x_bound-mid_x, _y_bound-mid_y, _x2_bound - _x_bound, _y2_bound - _y_bound, ]),
-	set(volume_bubbles.particles, (
-		raw_particle_system_info + {
-			position: [
-				(_x_bound + _x2_bound)/2 - mid_x, //Horizontal offset of particle system as wide as the water, to handle when the emitter object isn't square within the bounds of the water.
-				_y2_bound - mid_y, //Position the center point (of the box emitter) at the bottom of the body of water.
-				0
-			],
-			fast_forward: (map <- raw_particle_system_info.fast_forward) + {
-				time: bubble_average_lifetime, //Pump the water full of bubbles when we first encounter it.
-			},
-			emitter: (map <- raw_particle_system_info.emitter) + {
-				time_to_live: bubble_average_lifetime, //Make the bubbles live until the top of the water.
-				box_width: _x2_bound - _x_bound, //Make the bubbles as wide as the water. (To position the bubbles, see `position` above.)
-				emission_rate: (map <- (map <- raw_particle_system_info.emitter).emission_rate) + {
-					max: (_x2_bound - _x_bound) / 20, //Particle density. (Particles per pixel of water surface, divided by 2 on average because random floor is 0.)
-				}
-			},
-		} where
-			raw_particle_system_info = 
-				(ParticleSystemInfo <- get_document('data/particles/bubbles_2.cfg')).info,
-			bubble_average_lifetime = 
-				(_y2_bound - _y_bound) / average_vertical_bubble_speed / 60/*fps*/
-				where average_vertical_bubble_speed = 0.7 //as experimentally verified
-	)),
-	add_object(volume_bubbles),
 
-
-	set(particle_systems['bubbles'].area, [_x_bound, _y_bound, _x2_bound, _y2_bound]),
-	set(particle_systems['fizz'].min_x, _x_bound - x),
-	set(particle_systems['fizz'].max_x, _x2_bound - x),
-	set(particle_systems['fizz'].min_y, (_y_bound - 15) - y),
-	set(particle_systems['fizz'].max_y, (_y_bound + 60) - y),
-	set(particle_systems['fizz'].spawn_rate, 4*(_x2_bound - _x_bound)),
-	set(particle_systems['splash'].min_x, _x_bound - x),
-	set(particle_systems['splash'].max_x, _x2_bound - 54 - x),
-	set(particle_systems['splash'].min_y, (_y_bound + 6) - y),
-	set(particle_systems['splash'].max_y, (_y_bound + 6) - y),
-	set(particle_systems['splash'].spawn_rate, 1*(_x2_bound - _x_bound)),
-	set(particle_systems['splash_droplets'].pos_x, _x_bound - x),
-	set(particle_systems['splash_droplets'].pos_x_rand, _x2_bound - x),
-	set(particle_systems['splash_droplets'].pos_y, (_y_bound) - y),
-	set(particle_systems['splash_droplets'].pos_y_rand, (_y_bound) - y),
-	set(particle_systems['splash_droplets'].generation_rate, 10*(_x2_bound - _x_bound))
-]",
 	   
 animation: {
 	id: "normal",
@@ -89,17 +105,6 @@ animation: {
 },
 
 particle_system: [
-	{
-		id: "bubbles",
-		type: "water",
-		number_of_particles: 100,
-		repeat_period: 200,
-		velocity_y: -1,
-		velocity_x: 0,
-		velocity_rand: 4,
-		dot_size: 2,
-		color: [120,250,200,200],
-	},
 	{
 		id: "fizz",
 		type: "simple",
