Set up the whitewater controller to allow its own texture.

--- a/data/objects/effects/liquids/whitewater_controller.cfg
+++ b/data/objects/effects/liquids/whitewater_controller.cfg
@@ -4,6 +4,7 @@ prototype: ["liquid"],
 zorder: "@include data/zorder.cfg:in_front_of_everything",
 
 properties: {
+	liquid_texture: "string :: 'liquids/whitewater-overlay.png'",
 	liquid_damage: "kill_anything",
 	
 	add_water_effect: "add_water(_x_bound, _y_bound, _x2_bound, _y2_bound, [140,00,0,70])",
@@ -20,6 +21,14 @@ properties: {
 			zorder: lib.zorder.get('liquid_particle_effects'),
 		})"
 	},
+	underlay_obj: {
+		type: "obj water_controller.underlay",
+		init: "object('water_controller.underlay', mid_x, mid_y, { 
+				parent: me,
+				time_to_die: 50,
+			})",
+	},
+
 
 #-------------------------- constructors --------------------------#
 	liquid_obj_constructor: "commands :: [
@@ -27,7 +36,7 @@ properties: {
 		setup_particles ;
 		[
 			setup_shader,
-//			add_object(underlay_obj),
+			add_object(underlay_obj),
 //			add_object(top_obj),
 //			add_object(lights_obj),
 //			add_object(lights_transverse_obj),
@@ -173,4 +182,45 @@ particle_system: [
 		accel_y: 200000,
 	},
 ],
+
+object_type: [
+	{
+		id: "underlay",
+		prototype: ["effects_attache"],
+		zorder: "@include data/zorder.cfg:background_parallax_walls_further",
+		properties: {
+
+			do_setup: "[
+				set(x,_parent_obj._x_bound),
+				set(y,_parent_obj._y_bound),
+				set(draw_area, [
+					0,
+					_offset, 
+					abs(_parent_obj._x2_bound-_parent_obj._x_bound)/2, 
+					abs(_parent_obj._y2_bound-_parent_obj._y_bound)/2
+				]),
+			] asserting _parent_obj is obj liquid",
+			
+			handle_specialized_processing: "[
+				add(_offset,0.25),
+				do_setup,
+			]",
+
+		#-------------------------- vars --------------------------#
+			_offset: { type: "decimal", default: 0, persistent: false },
+		},
+
+		#we don't want to compile the image since we rely on it tiling.
+		no_compile_image: "liquids/whitewater-underlay.png",
+		animation: {
+			image: "liquids/whitewater-underlay.png",
+			id: "normal",
+			x: 0,
+			w: 256,
+			y: 0,
+			h: 256,
+		},
+	},
+],
+
 }
