--- a/data/shaders.cfg
+++ b/data/shaders.cfg
@@ -91,12 +91,13 @@
 		fragment: "
 			#version 120
 			uniform sampler2D u_anura_tex_map;
-			uniform sampler2D u_water_tex_0; //my kingdom for an array
-			uniform sampler2D u_water_tex_1;
-			uniform sampler2D u_water_tex_2;
+			uniform sampler2D u_water_texture; //my kingdom for an array
+			uniform sampler2D u_acid_texture;
+			uniform sampler2D u_deadly_acid_texture;
+			uniform sampler2D u_whitewater_texture;
 			//[ADDING_WATER] If adding a new water type, add its texture sampler.
-			uniform float u_water_tex_dim[3];
-			uniform float u_water_tex_speed[3];
+			uniform float u_water_tex_dim[4];
+			uniform float u_water_tex_speed[4];
 			//[ADDING_WATER] If adding a new water type, increase the size of dim and speed by 1 each to accommodate the new data.
 			uniform vec4 u_camera_pos;
 			uniform float u_zoom;
@@ -244,27 +245,34 @@
 				if( water_type == 0 ){
 					//Water texture & movement.
 						liquid_tex_color = (
-							  texture2D(u_water_tex_0, loc + vec2(0.2, u_anura_cycle*u_water_tex_speed[water_type]))
-							+ texture2D(u_water_tex_0, loc + vec2(0.5, u_anura_cycle*u_water_tex_speed[water_type]))
+							  texture2D(u_water_texture, loc + vec2(0.2, u_anura_cycle*u_water_tex_speed[water_type]))
+							+ texture2D(u_water_texture, loc + vec2(0.5, u_anura_cycle*u_water_tex_speed[water_type]))
 						)*0.5;
 						
 				} else if ( water_type == 1 ) {
 					//Acid texture and movement.
 						liquid_tex_color = (
-							  texture2D(u_water_tex_1, loc + vec2(u_anura_cycle*u_water_tex_speed[water_type], 0.0))
-							+ texture2D(u_water_tex_1, loc + vec2(u_anura_cycle*u_water_tex_speed[water_type], 0.5))
+							  texture2D(u_acid_texture, loc + vec2(u_anura_cycle*u_water_tex_speed[water_type], 0.0))
+							+ texture2D(u_acid_texture, loc + vec2(u_anura_cycle*u_water_tex_speed[water_type], 0.5))
 						)*0.5;
 						
 				} else if ( water_type == 2 ) {
 					//Deadly acid texture and movement.
 						liquid_tex_color = (
-							  texture2D(u_water_tex_2, loc + vec2(0.2, u_anura_cycle*u_water_tex_speed[water_type] * +0.2))
-							+ texture2D(u_water_tex_2, loc + vec2(0.5, u_anura_cycle*u_water_tex_speed[water_type] * -1.5))
+							  texture2D(u_deadly_acid_texture, loc + vec2(0.2, u_anura_cycle*u_water_tex_speed[water_type] * +0.2))
+							+ texture2D(u_deadly_acid_texture, loc + vec2(0.5, u_anura_cycle*u_water_tex_speed[water_type] * -1.5))
 						)*0.5;
 						
 					//[ADDING_WATER] If adding a new water type, specify the new mix above.
 					
-				} else {
+				} else if ( water_type == 3 ) {
+					//whitewater texture & movement.
+						liquid_tex_color = (
+							  texture2D(u_whitewater_texture, loc + vec2(u_anura_cycle*u_water_tex_speed[water_type], 0.0))
+							+ texture2D(u_whitewater_texture, loc + vec2(u_anura_cycle*u_water_tex_speed[water_type], 0.5))
+						)*0.5;
+						
+				}else {
 					//No water found, just shade grey and abort *if* we get here.
 						gl_FragColor = vec4(0.5,0.5,0.5,1);
 						return;
@@ -376,12 +384,14 @@
 			bind_texture(liquid_textures[0], 2),
 			bind_texture(liquid_textures[1], 3),
 			bind_texture(liquid_textures[2], 4),
-			set(uniform_commands.u_water_tex_0, 2),
-			set(uniform_commands.u_water_tex_1, 3),
-			set(uniform_commands.u_water_tex_2, 4),
-			//[ADDING_WATER] If adding a water type, add a new texture binding
-			//[ADDING_WATER] above. This is because we can't pass in uniform
-			//[ADDING_WATER] arrays from Anura.
+			bind_texture(liquid_textures[3], 5),
+			set(uniform_commands.u_water_texture, 2),
+			set(uniform_commands.u_acid_texture, 3),
+			set(uniform_commands.u_deadly_acid_texture, 4),
+			set(uniform_commands.u_whitewater_texture, 5),
+			
+			
+			//[ADDING_WATER] If adding a water type, add a new texture binding above. This is because we can't pass in uniform arrays from Anura.
 			
 			set(uniform_commands.u_water_tex_dim,   [if(ctrl, ctrl.texture_dim,   1) | ctrl <- ctrls]),
 			set(uniform_commands.u_water_tex_speed, [if(ctrl, ctrl.texture_speed, 1) | ctrl <- ctrls]),
@@ -389,12 +399,11 @@
 			if(ctrl, ctrl.get_texture, load_texture('default-animation.png'))
 			| ctrl <- ctrls
 		] where ctrls = [
-			find(level.chars, value is obj water_controller or value is obj whitewater_controller or value is obj water_controller_rising or value is obj water_controller_ocean),
+			find(level.chars, value is obj water_controller or value is obj water_controller_rising or value is obj water_controller_ocean),
 			find(level.chars, value is obj acid_controller),
 			find(level.chars, value is obj acid_deadly_controller),
-			//[ADDING_WATER] The index of the water found in the list must be
-			//[ADDING_WATER] the water type number. All liquids must be in this
-			//[ADDING_WATER] list.
+			find(level.chars, value is obj whitewater_controller),
+			//[ADDING_WATER] The index of the water found in the list must be the water type number. All liquids must be in this list.
 		]",
 
 		draw: "[//Load dynamic level information into the shader.
@@ -417,11 +426,11 @@
 			] | water <- waters],
 			water_types = [switch(true,
 				water is obj water_controller,        0,
-				water is obj whitewater_controller,   0,
 				water is obj water_controller_rising, 0,
 				water is obj water_controller_ocean,  0,
 				water is obj acid_controller,         1,
 				water is obj acid_deadly_controller,  2,
+				water is obj whitewater_controller,   3,
 				//[ADDING_WATER] If your new water is shaded like an existing water, add it above and use an existing water type number. Otherwise, add a new water type number.
 				-1
 			) | water <- waters]
