Some further tweaks to the whitewater stuff, including a base texture that doesn't have seams.

--- a/data/shaders.cfg
+++ b/data/shaders.cfg
@@ -268,8 +268,8 @@
 				} else if ( water_type == 3 ) {
 					//whitewater texture & movement.
 						liquid_tex_color = (
-							  texture2D(u_whitewater_texture, loc + vec2(u_anura_cycle*u_water_tex_speed[water_type], 0.0))
-							+ texture2D(u_whitewater_texture, loc + vec2(u_anura_cycle*u_water_tex_speed[water_type], 0.5))
+							  texture2D(u_whitewater_texture, loc + vec2(u_anura_cycle *  2 * u_water_tex_speed[water_type], 0.0))
+							+ texture2D(u_whitewater_texture, loc + vec2(u_anura_cycle * -2 * u_water_tex_speed[water_type], 0.5))
 						)*0.5;
 						
 				}else {
