--- a/data/shaders.cfg
+++ b/data/shaders.cfg
@@ -267,10 +267,16 @@
 					
 				} else if ( water_type == 3 ) {
 					//whitewater texture & movement.
+//						liquid_tex_color = (
+//							  texture2D(u_whitewater_texture, loc + vec2(u_anura_cycle *  2 * u_water_tex_speed[water_type], 0.0))
+//							+ texture2D(u_whitewater_texture, loc + vec2(u_anura_cycle * -2 * u_water_tex_speed[water_type], 0.5 * sin(u_anura_cycle * 200)))
+//						)*0.5;
+
 						liquid_tex_color = (
-							  texture2D(u_whitewater_texture, loc + vec2(u_anura_cycle *  2 * u_water_tex_speed[water_type], 0.0))
-							+ texture2D(u_whitewater_texture, loc + vec2(u_anura_cycle * -2 * u_water_tex_speed[water_type], 0.5))
+							+ texture2D(u_whitewater_texture, loc + vec2(u_anura_cycle *  2 * u_water_tex_speed[water_type], 0.0 + 0.07 * sin(u_anura_cycle / 12.0)))
+							+ texture2D(u_whitewater_texture, loc + vec2(u_anura_cycle * -2 * u_water_tex_speed[water_type], 0.5 + 0.05 * sin(u_anura_cycle / 10.0)))
 						)*0.5;
+
 						
 				}else {
 					//No water found, just shade grey and abort *if* we get here.
