--- a/data/shaders.cfg
+++ b/data/shaders.cfg
@@ -273,9 +273,11 @@
 //						)*0.5;
 
 						liquid_tex_color = (
-							+ texture2D(u_whitewater_texture, loc + vec2(u_anura_cycle *  2 * u_water_tex_speed[water_type], 0.0 + 0.07 * sin(u_anura_cycle / 12.0)))
-							+ texture2D(u_whitewater_texture, loc + vec2(u_anura_cycle * -2 * u_water_tex_speed[water_type], 0.5 + 0.05 * sin(u_anura_cycle / 10.0)))
-						)*0.5;
+							+ texture2D(u_whitewater_texture, loc + vec2(u_anura_cycle *  2 * u_water_tex_speed[water_type], 0.0 + 0.006 * sin(u_anura_cycle / 3.0)  ))
+							+ texture2D(u_whitewater_texture, loc + vec2(u_anura_cycle *  1.1 * u_water_tex_speed[water_type], 0.2 + 0.005 * sin(u_anura_cycle / 2.0) + 0.003 * sin(u_anura_cycle / 1.0)  ))
+							+ texture2D(u_whitewater_texture, loc + vec2(u_anura_cycle * -1.1 * u_water_tex_speed[water_type], 0.5 + 0.004 * sin(u_anura_cycle / 2.5) + 0.004 * sin(u_anura_cycle / 1.5)  ))
+							+ texture2D(u_whitewater_texture, loc + vec2(u_anura_cycle * -2 * u_water_tex_speed[water_type], 0.75 + 0.006 * sin(u_anura_cycle / 2.5)  ))
+						)*0.25;
 
 						
 				}else {
