Some improvements to the whitewater effect.

--- a/data/shaders.cfg
+++ b/data/shaders.cfg
@@ -373,15 +373,26 @@
 					blurred_liquid.a
 				);
 				
-				//[ADDING_WATER] If adding a new water type, add a float below.
+				
+				/*
+					[ADDING_WATER] Instead of having a hard-coded value for this; it picks from an array, using 'which kind of water' we are as the index.  If you're adding a new water type, you'll need to add another entry (it won't error out if you don't, but it'll treat the value as either zero, or we might be hitting 'out of array bounds' c-style Undefined Behavior, which is bad).
+				
+					Right above here, we run a full calc of what the pixel would look like if we blend it against what's already on screen; using either the photoshop-named 'screen' blending mode, or the 'overlay' blending mode.  Here, we decide how much of each we want to go into the final pixel by tweening between the two values. 
+				*/
 				vec3 semifinal_color = mix(screen_blended_color, overlay_blended_color, 
-					float[](0.9, 0.65, 0.75)[water_type]);
+					float[](0.9, 0.65, 0.75, 0.55)[water_type]);
 				
 				vec4 final_color = vec4(semifinal_color.r, semifinal_color.g, semifinal_color.b, blurred_liquid.a);
+
 				
-				//[ADDING_WATER] If adding a new water type, add a float below.
+				/*
+					[ADDING_WATER] Same routine as above.
+				
+					This one is just a plain-and-simple 'opacity slider' for the entire shader effect.  How much of the final pixel is just what was already on-screen, versus how much is based on our shader stuff.
+				*/
+				
 				gl_FragColor = mix(final_color, fb_color, 
-					float[](0.2, 0.0, 0.0)[water_type]);
+					float[](0.2, 0.0, 0.0, 0.0)[water_type]);
 				gl_FragColor.a = 1.0;
 			}
 		",
